kubeflow-v0.6/manifests-repo/manifests-master/common/centraldashboard/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: centraldashboard
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - "kubeflow.svc.oleg108.dev.superhub.io"
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: centraldashboard.$(namespace).svc.$(clusterDomain)
            port:
              number: 80
